--- a/styles/main.css
+++ b/styles/main.css
@@ -22,19 +22,22 @@ h1, h2, h3, h4, h5, p {
 	background-color: #1c1c1c;
 	margin: 5% 8.5% 5% 8.5%;
 	padding: 2% 5% 2% 5%;
-	border: solid; border-color: #c24a00; 
+	border: solid; border-color: #c24a00; border-radius: 12px;
 	box-shadow: 0px 0px 10px 0px;
 }
 #container_body {
 	background-color: #1c1c1c;
 	margin: 2.5% 8.5% 5% 8.5%;
 	padding: 2% 5% 2% 5%;
-	border: solid; border-color: #c24a00; 
+	border: solid; border-color: #c24a00; border-radius: 12px;
 }
+#container_intro {
+	min-height: 280px;
+}
+
 #container_stats {
 	overflow: auto;
 	padding: 2.5% 5% 2.5% 5%;
-
 }
 #title {
 	float: left;
@@ -67,9 +70,12 @@ h1, h2, h3, h4, h5, p {
 	margin: 2%;
 	padding: 10px 20px 10px 20px;
 	text-align: center;
-	border: solid 1px; border-color: #c24a00;
+	border: solid 1px; border-color: #c24a00; border-radius: 12px;
 	width: 20%;
 }
-.stat_box h4, h5 {
+#container_stats :hover {
+	background-color: #333333;
+}
+.stat_box h4 {
 	color: #c24a00;
 }
