--- a/styles/main.css
+++ b/styles/main.css
@@ -20,19 +20,25 @@ h1, h2, h3, h4, h5, p {
 #container_header {
 	min-height: 175px;
 	background-color: #1c1c1c;
+	background-image: url('../images/mvp_trophy_transparent.png');
+	background-size: 28%; background-repeat: no-repeat;
+	background-position: top;
+	background-clip: padding-box;
 	margin: 5% 8.5% 5% 8.5%;
 	padding: 2% 5% 2% 5%;
 	border: solid; border-color: #c24a00; border-radius: 12px;
-	box-shadow: 0px 0px 10px 0px;
+	box-shadow: 5px 5px 5px 1px;
 }
 #container_body {
 	background-color: #1c1c1c;
 	margin: 2.5% 8.5% 5% 8.5%;
-	padding: 2% 5% 2% 5%;
+	padding: 2% 4% 2% 4%;
 	border: solid; border-color: #c24a00; border-radius: 12px;
+	box-shadow: 5px 5px 5px 1px;
 }
 #container_intro {
 	min-height: 280px;
+	overflow: auto;
 }
 #container_intro h3 {
 	text-align: center;
@@ -48,6 +54,9 @@ h1, h2, h3, h4, h5, p {
 }
 #container_table {
 	float: left;
+}
+#container_table h4 {
+	text-align: center;
 }
 #title {
 	float: left;
@@ -82,6 +91,7 @@ h1, h2, h3, h4, h5, p {
 	text-align: center;
 	border: solid 1px; border-color: #c24a00; border-radius: 12px;
 	width: 20%;
+	box-shadow: 5px 5px 5px 1px;
 }
 #container_stats :hover {
 	background-color: #333333;
@@ -91,4 +101,7 @@ h1, h2, h3, h4, h5, p {
 }
 #table {
 	color: white;
+}
+td {
+	padding: 4px;
 }
