--- a/styles/main.css
+++ b/styles/main.css
@@ -48,9 +48,19 @@ h1, h2, h3, h4, h5, p {
 	padding: 2.5% 5% 2.5% 5%;
 	text-align: center; /*inline block treats each element as text*/
 }
+#container_sidebar {
+	overflow: auto;
+	min-height: 500px;
+}
 #container_search {
 	float: right;
+	display: block;
 						/*to do: add*/
+}
+#container_signup {
+	margin-top: 50px;
+	float:right;
+	display: block;
 }
 #container_table {
 	float: left;
@@ -84,6 +94,15 @@ h1, h2, h3, h4, h5, p {
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
 }
+
+#img_harden {
+	height:70%;
+	width:70%;
+}
+#img_giannis {
+	height: 80%;
+	width: 80%;
+}
 .stat_box {
 	display: inline-block;
 	margin: 2%;
@@ -103,7 +122,13 @@ h1, h2, h3, h4, h5, p {
 	color: white;
 }
 #search_input{
-	
+
+}
+.video_link {
+	text-decoration: none;
+}
+.video_link :hover {
+	color: #c24a00;
 }
 td {
 	padding: 4px;
